# Simbo

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  setup.py
config/: settings.yaml
src/simbo/: __init__.py  app.py
src/simbo/agents/: __init__.py  simulation_agent.py  world_agent.py
src/simbo/data/: __init__.py  world_database.py
src/simbo/pages/: __init__.py  components.py  home.py  program.py  robot.py  workspace_manager.py  world.py
src/simbo/tools/: __init__.py  code_tools.py  file_tools.py  shell_tools.py  workspace_tools.py  world_tools.py
src/simbo/utils/: __init__.py  map_generator.py  state.py
src/simbo/views/: __init__.py  home.py  map_generator.py  program.py  robot.py  workspace_manager.py  world.py
